[gd_scene load_steps=3 format=3 uid="uid://cvsuy53ebfs7g"]

[ext_resource type="Script" path="res://hazards/area_hazard.gd" id="1_vjbix"]
[ext_resource type="Texture2D" uid="uid://c3bfora7y15ms" path="res://raw_assets/thorns.png" id="2_xqye5"]

[node name="Thorns" type="Area2D"]
collision_layer = 64
collision_mask = 22
script = ExtResource("1_vjbix")
damage = 10
bounce_vel = 750

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(10, -121)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_xqye5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(13, -22)
polygon = PackedVector2Array(-120, 8, -119, -26, -109, -58, -83, -63, -54, -68, -31, -69, -9, -68, 2, -67, 11, -55, 24, -54, 60, -54, 76, -36, 81, -17, 90, -6, 91, 13, 80, 17, 64, 20, -107, 18)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
